Forgot to commit this.

--- a/Updater.csproj
+++ b/Updater.csproj
@@ -70,7 +70,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logger.cs" />
     <Compile Include="ProgressHandler.cs" />
+    <Compile Include="Reciever.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="UI.cs">
       <SubType>Form</SubType>
@@ -117,6 +119,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="src\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
