--- a/Updater.csproj
+++ b/Updater.csproj
@@ -70,22 +70,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Logger.cs" />
-    <Compile Include="ProgressHandler.cs" />
-    <Compile Include="Reciever.cs" />
-    <Compile Include="Request.cs" />
-    <Compile Include="UI.cs">
+    <Compile Include="src\Logger.cs" />
+    <Compile Include="src\DownloadHandler.cs" />
+    <Compile Include="src\callbacks\OnDownloadCompleted.cs" />
+    <Compile Include="src\callbacks\OnEvent.cs" />
+    <Compile Include="src\Reciever.cs" />
+    <Compile Include="src\Request.cs" />
+    <Compile Include="src\Asset.cs" />
+    <Compile Include="ui\Ui.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI.Designer.cs">
-      <DependentUpon>UI.cs</DependentUpon>
+    <Compile Include="ui\Ui.Designer.cs">
+      <DependentUpon>Ui.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Client.cs" />
-    <Compile Include="UpdateNode.cs" />
-    <EmbeddedResource Include="UI.resx">
-      <DependentUpon>UI.cs</DependentUpon>
+    <Compile Include="src\Client.cs" />
+    <Compile Include="src\UpdateNode.cs" />
+    <EmbeddedResource Include="ui\Ui.resx">
+      <DependentUpon>Ui.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -120,8 +123,11 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="src\" />
+    <Content Include="assets\0.1-sample.xml" />
+    <Content Include="assets\server.xml" />
+    <Content Include="assets\update.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
