--- a/app.config
+++ b/app.config
@@ -1,4 +1,17 @@
 <?xml version="1.0"?>
 <configuration>
-	<startup/>
+  <appSettings>
+    <!--
+    Logging Configuration:
+      OFF = 0
+      DEBUG = 1
+      INFO = 2
+      WARN = 3
+      ERROR = 4
+      FATAL = 5
+    
+      Description: log type >= logging config
+    -->
+    <add key="logging" value="1,2,3,4,5"/>
+  </appSettings>
 </configuration>
