Started on the update implementations! Lots of structure additions.
* Need to consider how I will be dealing with the file extractions and general management of files.

--- a/Updater.csproj
+++ b/Updater.csproj
@@ -77,6 +77,7 @@
     <Compile Include="src\Reciever.cs" />
     <Compile Include="src\Request.cs" />
     <Compile Include="src\Asset.cs" />
+    <Compile Include="src\Update.cs" />
     <Compile Include="ui\Ui.cs">
       <SubType>Form</SubType>
     </Compile>
