--- a/Updater.csproj
+++ b/Updater.csproj
@@ -71,6 +71,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\Archive.cs" />
+    <Compile Include="src\Changelog.cs" />
+    <Compile Include="src\GhostFile.cs" />
+    <Compile Include="src\QueueCallback.cs" />
     <Compile Include="src\RequestCallback.cs" />
     <Compile Include="src\Logger.cs" />
     <Compile Include="src\DownloadHandler.cs" />
@@ -126,7 +130,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="assets\0.1-sample.xml" />
+    <Content Include="assets\0.2-sample.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="assets\server.xml" />
     <Content Include="assets\update.xml" />
   </ItemGroup>
