--- a/Updater.csproj
+++ b/Updater.csproj
@@ -74,6 +74,11 @@
     <Compile Include="src\Archive.cs" />
     <Compile Include="src\Changelog.cs" />
     <Compile Include="src\GhostFile.cs" />
+    <Compile Include="ui\GlossyButton.cs">
+      <SubType>UserControl</SubType>
+      <Generator>GlossyButton</Generator>
+      <CustomToolNamespace>GlossyButton</CustomToolNamespace>
+    </Compile>
     <Compile Include="src\QueueCallback.cs" />
     <Compile Include="src\RequestCallback.cs" />
     <Compile Include="src\Logger.cs" />
@@ -82,6 +87,15 @@
     <Compile Include="src\Request.cs" />
     <Compile Include="src\Asset.cs" />
     <Compile Include="src\Update.cs" />
+    <Compile Include="ui\GlossyButton.Designer.cs">
+      <DependentUpon>GlossyButton.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\PrettyProgressBar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ui\PrettyProgressBar.Designer.cs">
+      <DependentUpon>PrettyProgressBar.cs</DependentUpon>
+    </Compile>
     <Compile Include="ui\Ui.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +106,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Client.cs" />
     <Compile Include="src\UpdateNode.cs" />
+    <EmbeddedResource Include="ui\GlossyButton.resx">
+      <DependentUpon>GlossyButton.cs</DependentUpon>
+      <SubType>Designer</SubType>
+      <Generator>GlossyButton</Generator>
+      <CustomToolNamespace>GlossyButton</CustomToolNamespace>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\Pbar.resx" />
+    <EmbeddedResource Include="ui\PrettyProgressBar.resx">
+      <DependentUpon>PrettyProgressBar.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="ui\Ui.resx">
       <DependentUpon>Ui.cs</DependentUpon>
     </EmbeddedResource>
@@ -133,6 +158,17 @@
     <Content Include="assets\0.2-sample.xml">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="assets\images\refresh.png" />
+    <None Include="assets\images\refresh-hover.png" />
+    <None Include="assets\images\play.png" />
+    <None Include="assets\images\play-hover.png" />
+    <None Include="assets\images\tick_blue.png" />
+    <None Include="assets\images\tick-blue.png" />
+    <None Include="assets\images\close-icon.png" />
+    <None Include="assets\images\minimize-icon.png" />
+    <None Include="assets\images\close-hover-icon.png" />
+    <None Include="assets\images\minimize-hover-icon.png" />
+    <None Include="assets\images\logo.png" />
     <Content Include="assets\server.xml" />
     <Content Include="assets\update.xml" />
   </ItemGroup>
