--- a/Updater.csproj
+++ b/Updater.csproj
@@ -73,14 +73,23 @@
   <ItemGroup>
     <Compile Include="src\Archive.cs" />
     <Compile Include="src\Changelog.cs" />
+    <Compile Include="src\ExternalAsset.cs" />
+    <Compile Include="src\FontHandler.cs" />
+    <Compile Include="src\StringAsyncCallback.cs" />
     <Compile Include="src\GhostFile.cs" />
+    <Compile Include="ui\Connecting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\Connecting.Designer.cs">
+      <DependentUpon>Connecting.cs</DependentUpon>
+    </Compile>
     <Compile Include="ui\GlossyButton.cs">
       <SubType>UserControl</SubType>
       <Generator>GlossyButton</Generator>
       <CustomToolNamespace>GlossyButton</CustomToolNamespace>
     </Compile>
     <Compile Include="src\QueueCallback.cs" />
-    <Compile Include="src\RequestCallback.cs" />
+    <Compile Include="src\RequestAsyncCallback.cs" />
     <Compile Include="src\Logger.cs" />
     <Compile Include="src\DownloadHandler.cs" />
     <Compile Include="src\Reciever.cs" />
@@ -106,13 +115,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Client.cs" />
     <Compile Include="src\UpdateNode.cs" />
+    <EmbeddedResource Include="ui\Connecting.resx">
+      <DependentUpon>Connecting.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ui\GlossyButton.resx">
       <DependentUpon>GlossyButton.cs</DependentUpon>
       <SubType>Designer</SubType>
       <Generator>GlossyButton</Generator>
       <CustomToolNamespace>GlossyButton</CustomToolNamespace>
     </EmbeddedResource>
-    <EmbeddedResource Include="ui\Pbar.resx" />
     <EmbeddedResource Include="ui\PrettyProgressBar.resx">
       <DependentUpon>PrettyProgressBar.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -161,14 +172,15 @@
     <None Include="assets\images\refresh.png" />
     <None Include="assets\images\refresh-hover.png" />
     <None Include="assets\images\play.png" />
-    <None Include="assets\images\play-hover.png" />
-    <None Include="assets\images\tick_blue.png" />
     <None Include="assets\images\tick-blue.png" />
     <None Include="assets\images\close-icon.png" />
     <None Include="assets\images\minimize-icon.png" />
     <None Include="assets\images\close-hover-icon.png" />
     <None Include="assets\images\minimize-hover-icon.png" />
     <None Include="assets\images\logo.png" />
+    <None Include="assets\images\loading-animation.gif" />
+    <None Include="assets\images\refresh.gif" />
+    <None Include="assets\images\icon.ico" />
     <Content Include="assets\server.xml" />
     <Content Include="assets\update.xml" />
   </ItemGroup>
