--- a/app.config
+++ b/app.config
@@ -14,4 +14,4 @@
     -->
     <add key="logging" value="1,2,3,4,5"/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
