--- a/app.config
+++ b/app.config
@@ -12,6 +12,10 @@
     
       Description: log type >= logging config
     -->
-    <add key="logging" value="1,2,3,4,5"/>
+    <add key="logging" value="1,2,3,4,5" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
+</configuration>
