--- a/Updater.csproj
+++ b/Updater.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Updater</RootNamespace>
-    <AssemblyName>Updater</AssemblyName>
+    <AssemblyName>update</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -54,9 +54,6 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x86\Debug\</OutputPath>
@@ -75,6 +72,15 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Updater.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -97,12 +103,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="src\Archive.cs" />
     <Compile Include="src\Changelog.cs" />
     <Compile Include="src\ExternalAsset.cs" />
     <Compile Include="src\FontHandler.cs" />
     <Compile Include="src\StringAsyncCallback.cs" />
     <Compile Include="src\GhostFile.cs" />
+    <Compile Include="src\Xml.cs" />
     <Compile Include="ui\Connecting.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -159,17 +171,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
+      <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <None Include="app.config">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="app.manifest">
       <SubType>Designer</SubType>
     </None>
@@ -199,6 +203,8 @@
     <Content Include="assets\0.2-sample.xml">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="assets\images\repair_new.png" />
+    <Content Include="icon.ico" />
     <EmbeddedResource Include="dlls\JacksonSoft.CustomTabControl.dll" />
     <None Include="assets\images\refresh.png" />
     <None Include="assets\images\refresh-hover.png" />
@@ -211,6 +217,8 @@
     <None Include="assets\images\logo.png" />
     <None Include="assets\images\refresh.gif" />
     <None Include="assets\images\icon.ico" />
+    <None Include="assets\images\repair.png" />
+    <None Include="assets\images\repair_hover.png" />
     <Content Include="assets\server.xml" />
     <Content Include="assets\update.xml" />
   </ItemGroup>
