Renamed the project to be a launcher (rather than updater)!

--- a/RocketLauncher.csproj
+++ b/RocketLauncher.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{E1AE2B6F-972B-41DE-80DB-B26CF4BB8AE6}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Updater</RootNamespace>
-    <AssemblyName>update</AssemblyName>
+    <RootNamespace>Launcher</RootNamespace>
+    <AssemblyName>launcher</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -80,7 +80,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Updater.Program</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
