Updated the server sample assets.

--- a/RocketLauncher.csproj
+++ b/RocketLauncher.csproj
@@ -217,10 +217,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="assets\0.2-sample.xml">
+    <None Include="assets\images\sheep_launcher_hover.png" />
+    <Content Include="assets\0.1-update.xml">
       <SubType>Designer</SubType>
     </Content>
-    <None Include="assets\images\sheep_launcher_hover.png" />
+    <Content Include="assets\0.2-update.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="icon.ico" />
     <None Include="assets\images\repair_new.png" />
     <EmbeddedResource Include="dlls\ListControls.dll" />
